# project-template

./: .dockerignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
docker/: Dockerfile
docker/scripts/: startup-script.sh
src/: entrypoint.py
src/configs/hydra/job_logging/: custom.yaml
src/utils/: config_utils.py
